[package]
name = "certo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.0.10", features = ["derive"]}
x509-parser = "0.14.0"
time = {version="0.3.11", features = ["formatting"]}
anyhow = "1.0"
ansi_term = "0.12.1"
term_size = "0.3.2"
